--- a/BNGW/style.css
+++ b/BNGW/style.css
@@ -81,3 +81,50 @@ h1.demo_css_text{
     color: #787878;
     font-weight: 400;/* normal */
 }
+
+.box-left{
+    width: 556px;
+    height: 570px;
+    background-color: #f6f6f6;
+    float: left;
+
+
+    /*border: none;*/
+    /*border: 3px dashed green;!* solid dotted dashed *!*/
+    border-top: 3px solid green;
+    border-right: 10px solid green;
+    border-bottom: 5px solid green;
+    border-left: 1px solid green;
+    /*text-indent: 80px;*/
+
+    /*padding-top: 100px;*/
+    /*padding-left: 80px;*/
+    /*padding-right: 80px;*/
+    /*padding-bottom:100px;*/
+
+    padding: 100px 80px 100px 80px ;
+
+    /*margin-top: 20px;*/
+    /*margin-left: 30px;*/
+    /*margin-bottom: 40px;*/
+    /*margin-right: 15px;*/
+
+    margin: 20px 15px 40px 30px;
+
+    box-sizing: border-box;
+
+    /*box-shadow: 10px 5px 10px red;*/
+    border-radius: 10px;
+}
+.box-right{
+    width:556px;
+    height: 570px;
+    background-color: #e6e6e6;
+    float: left;
+}
+.pong{
+    width: 10px;
+    height: 10px;
+    background: green;
+    border-radius: 100%;
+}
